Refatora débitos técnicos do sonar.